Various fixes and improvements
- Change thank you text to be different based on category
- Change starting headline to be different for account and status reports
- Change toggle components to have a checkmark when checked
- Fix report dialog being cut off on small screens
- Fix thank you screen offering mute or block if already muted or blocked
- Refactor toggle components in report dialog into one component

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -1101,46 +1101,38 @@
   font-size: 15px;
 }
 
-.status-check-box {
-  border-bottom: 1px solid $ui-secondary-color;
+.status-check-box__status {
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 0 10px;
 
-  &:last-child {
-    border-bottom: 0;
+  .detailed-status__display-name {
+    color: lighten($inverted-text-color, 16%);
+
+    span {
+      display: inline;
+    }
+
+    &:hover strong {
+      text-decoration: none;
+    }
   }
 
-  &__status {
-    display: block;
-    box-sizing: border-box;
-    width: 100%;
-    padding: 0 10px;
+  .media-gallery,
+  .audio-player,
+  .video-player {
+    margin-top: 8px;
+    max-width: 250px;
+  }
 
-    .detailed-status__display-name {
-      color: lighten($inverted-text-color, 16%);
+  .status__content {
+    padding: 0;
+    white-space: normal;
+  }
 
-      span {
-        display: inline;
-      }
-
-      &:hover strong {
-        text-decoration: none;
-      }
-    }
-
-    .media-gallery,
-    .audio-player,
-    .video-player {
-      margin-top: 8px;
-      max-width: 250px;
-    }
-
-    .status__content {
-      padding: 0;
-      white-space: normal;
-    }
-
-    .media-gallery__item-thumbnail {
-      cursor: default;
-    }
+  .media-gallery__item-thumbnail {
+    cursor: default;
   }
 }
 
@@ -5111,9 +5103,11 @@ a.status-card.compact:hover {
     box-sizing: border-box;
     border-top: 1px solid $ui-secondary-color;
     padding: 20px;
-    flex: 1 1 auto;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
+    min-height: 0;
+    overflow: auto;
   }
 
   &__title {
@@ -5121,6 +5115,10 @@ a.status-card.compact:hover {
     line-height: 33px;
     font-weight: 700;
     margin-bottom: 15px;
+
+    @media screen and (max-height: 800px) {
+      font-size: 22px;
+    }
   }
 
   &__subtitle {
@@ -5147,10 +5145,9 @@ a.status-card.compact:hover {
   }
 
   &__statuses {
-    flex: 1 1 auto;
-    max-height: 50vh;
-    overflow-y: auto;
-    overflow-x: hidden;
+    flex-grow: 1;
+    min-height: 0;
+    overflow: auto;
   }
 
   .status__content a {
@@ -5164,6 +5161,15 @@ a.status-card.compact:hover {
 
   .dialog-option .poll__input {
     border-color: $inverted-text-color;
+    color: $ui-secondary-color;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+
+    svg {
+      width: 8px;
+      height: auto;
+    }
 
     &:active,
     &:focus,
@@ -5179,7 +5185,13 @@ a.status-card.compact:hover {
   }
 
   .poll__option.dialog-option {
-    padding: 8px 0;
+    padding: 15px 0;
+    flex: 0 0 auto;
+    border-bottom: 1px solid $ui-secondary-color;
+
+    &:last-child {
+      border-bottom: 0;
+    }
 
     & > .poll__option__text {
       font-size: 13px;
@@ -5192,12 +5204,12 @@ a.status-card.compact:hover {
         color: $inverted-text-color;
         display: block;
         margin-bottom: 4px;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
       }
     }
-  }
-
-  .poll__option.status-check-box.dialog-option {
-    padding: 15px 0;
   }
 
   .flex-spacer {
@@ -5244,6 +5256,7 @@ a.status-card.compact:hover {
   .button.button-secondary {
     border-color: $inverted-text-color;
     color: $inverted-text-color;
+    flex: 0 0 auto;
 
     &:hover,
     &:focus,
